# ddd-fastapi

./: .dockerignore  .gitignore  .sops.yaml  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml
backend/: README.md  alembic.ini  arq.Dockerfile  fastapi.Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260622_0001_initial.py  20260624_0002_job_tables.py  20260707_0003_pending_job_dispatch.py
backend/app/: config.py  main.py
backend/app/domain/: __init__.py
backend/app/domain/agent/: __init__.py
backend/app/domain/codex_auth/: __init__.py
backend/app/domain/codex_job/: __init__.py
backend/app/domain/event/: __init__.py  registry.py
backend/app/domain/file/: __init__.py
backend/app/domain/item/: __init__.py
backend/app/domain/job/: __init__.py
backend/app/domain/user/: __init__.py
backend/app/infrastructure/arq/: __init__.py  codex_job_queue.py  codex_job_runner.py  deps.py  job_cancellation_backend.py  job_dispatcher.py  job_event_publisher.py  job_event_stream.py  job_queue.py  job_runtime.py  job_workers.py  settings.py  worker.py
backend/app/infrastructure/artifact_storage/: __init__.py  storage.py
backend/app/infrastructure/clock/: __init__.py  system_clock.py
backend/app/infrastructure/codex/: __init__.py  auth_session.py  authenticator.py  device_login.py  executor.py  job_runner.py
backend/app/infrastructure/codex_auth/: __init__.py
backend/app/infrastructure/di/: __init__.py  injection.py
backend/app/infrastructure/email/: __init__.py  utils.py
backend/app/infrastructure/event/: __init__.py  event_codec.py
backend/app/infrastructure/file_storage/: __init__.py  filesystem_file_storage.py
backend/app/infrastructure/job_artifact_storage/: __init__.py  filesystem_job_artifact_storage.py
backend/app/infrastructure/openai_agents/: __init__.py  codex_workflow_runner.py  workflow_registry.py
backend/app/infrastructure/redis/: __init__.py  codex_job_event_publisher.py
backend/app/infrastructure/security/: __init__.py  jwt.py  password_hasher.py  password_reset_token.py
backend/app/infrastructure/sqlmodel/: __init__.py  database.py  datetime.py
backend/app/infrastructure/stream/: __init__.py  agent_event_stream.py  agent_events.py  redis.py
backend/app/infrastructure/taskiq/: __init__.py  agent_dispatcher.py  agent_runner.py  agent_tasks.py  broker.py
backend/app/presentation/api/: api_router.py
backend/app/usecase/: __init__.py
backend/app/usecase/agent/: __init__.py  cancel_codex_device_login_use_case.py  (+3 more)
backend/scripts/: ddd_linter.py  e2e_jobs.py
backend/tests/: conftest.py
backend/tests/domain/: test_item_domain.py  test_user_domain.py
backend/tests/infrastructure/: test_security_and_email.py  test_sqlmodel_repositories.py
backend/tests/integration/: test_api.py
backend/tests/usecase/: fakes.py  test_await_job_terminal.py  test_codex_auth_code_and_url.py  test_codex_device_login_use_cases.py  test_codex_job_use_cases.py  test_create_job_and_cancel.py  test_delete_job.py  test_item_use_cases.py  test_job_launcher_and_cancel.py  test_launch_job.py  test_restart_job.py  test_user_use_cases.py
(+479 files in other folders)
