[project]
name = "app"
version = "0.1.0"
description = "FastAPI backend organized for DDD experiments"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic<2.0.0,>=1.12.1",
    "arq>=0.25.0",
    "asyncpg<1.0.0,>=0.31.0",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "emails<1.0,>=0.6",
    "fast-depends>=3.0.8",
    "fastapi[standard]<1.0.0,>=0.114.2",
    "faststream[redis]>=0.7.1",
    "httpx<1.0.0,>=0.25.1",
    "jinja2<4.0.0,>=3.1.4",
    "openai-agents>=0.17.6",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic>2.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "pyjwt<3.0.0,>=2.13.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "sqlmodel<1.0.0,>=0.0.21",
    "tenacity<10.0.0,>=8.2.3",
]

[dependency-groups]
dev = [
    "aiosqlite<1.0.0,>=0.22.1",
    "coverage<8.0.0,>=7.4.3",
    "prek>=0.2.24,<1.0.0",
    "pytest<10.0.0,>=7.4.3",
    "ruff<1.0.0,>=0.2.2",
    "ty>=0.0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG001",
    "T201",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
